[package]
name = "tcpTokioServer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
#futures = "0.3.31"
time = "0.3.37"
log = { version = "0.4", features = ["max_level_info", "release_max_level_info"] }
#colog = "1.3.0"
crossbeam-channel = "0.5.14"
simplelog = "0.12.2"
regex = "1.11.1"

[build]
rustflags = ["--cfg", "tokio_unstable"]
